# KenPix

./: .gitignore  README.md  generate-icons.bat  index.html  package-lock.json  package.json  promt.md  release-note.md
src/: App.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
